[package]
name = "codex-sglang-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge that translates Codex /responses to SGLang /chat/completions"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
